--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/tailwind": "^5.0.2",
+    "@fontsource-variable/league-spartan": "^5.0.17",
     "astro": "^3.4.3",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.1"
   }
 }
