--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.0.2",
     "@fontsource-variable/league-spartan": "^5.0.17",
     "astro": "^3.4.3",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
   },
